--- a/package.json
+++ b/package.json
@@ -4,14 +4,19 @@
   "description": "A Telegram bot for monitoring MintMe pool status",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "pm2 start index.js --name pool-monitor",
+    "stop": "pm2 stop pool-monitor",
+    "restart": "pm2 restart pool-monitor",
+    "monitor": "pm2 monit",
+    "logs": "pm2 logs",
     "dev": "nodemon index.js"
   },
   "dependencies": {
     "axios": "^0.21.1",
     "dotenv": "^10.0.0",
     "node-telegram-bot-api": "^0.54.0",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "pm2": "^5.3.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
